shared/css/custom_styles.css
/* ... */
code {
	font-size: 80%;
}
#partForm .row {
	margin: 15px 0;
}
#partForm label {
	margin-bottom: 0;
	margin-left: 5px;
}
#partForm .form-group {
	margin-right: 5px;
}
#jqxDropDownList {
	padding: .86rem 0;
}
button.detail-edit-cell {
	width: auto;
	margin-top: -1.9rem;
}
button#open.red_bk {
	background-color: white;
	-webkit-box-shadow: -2px -3px 40px -5px rgba(204, 204, 204, 1);
	-moz-box-shadow: -2px -3px 40px -5px rgba(204, 204, 204, 1);
	box-shadow: -2px -3px 40px -5px rgba(204, 204, 204, 1);
	background: -moz-linear-gradient(top, rgba(165, 28, 48, .3) 17%, rgba(160, 77, 88, 0.17) 100%, rgba(109, 0, 25, .14) 100%); /*FF3.6-15*/
	background: -webkit-linear-gradient(top, rgba(165, 28, 48, .3) 17%, rgba(160, 77, 88, 0.17) 100%, rgba(109, 0, 25, .14) 100%); /*Chrome10-25,Safari5.1-6*/
	background: linear-gradient(to bottom, rgba(165, 28, 48, .3) 17%, rgba(160, 77, 88, 0.17) 100%, rgba(109, 0, 25, .14) 100%); /*W3C,IE10+,FF16+,Chrome26+, Opera12+,Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a51c30', endColorstr='#0a6d0019', GradientType=0);
}
input.text {
	margin-bottom: 12px;
	width: 95%;
	padding: .4rem;
}
div#users-contain {
	width: 350px;
	margin: 20px 0;
}
div#users-contain table {
	margin: 1rem 0;
	border-collapse: collapse;
	width: 100%;
}
div#users-contain table td, div#users-contain table th {
	border: 1px solid #eee;
	padding: .6rem 10px;
	text-align: left;
}
.ui-dialog .ui-state-error {
	padding: .3rem;
}
.validateTips {
	border: 1px solid transparent;
	padding: 0.3rem;
}
button#save.white_bk {
	background-color: white;
}
div#users-contain {
	width: 700px;
	margin: 20px 0;
}
div#users-contain table {
	margin: 1em 0;
	border-collapse: collapse;
	width: 100%;
}
div#users-contain table td, div#users-contain table th {
	border: 1px solid #eee;
	padding: .6rem 10px;
	text-align: left;
}
.ui-dialog .ui-state-error {
	padding: .3rem;
}
.validateTips {
	border: 1px solid transparent;
	padding: 0.3rem;
}
.list-group-item {
	border: none;
	background-color: transparent;
}
ul.sd li.list-group-item {
	margin-bottom: 0;
	border-bottom: 1px solid #ccc;
}
ul.sd li.list-group-item:nth-last-of-type(2) {
	border-bottom: none;
	background-color:transparent;
}
ul.sd li.list-group-item:last-child {
	margin-bottom: 0;
	border-radius: 0;
	border-bottom: 1px solid transparent;
}

.jqx-widget-header {
	background-color: #deebec !important;
	/*	padding: .15em 0;*/
	border-radius: 4px;
	margin-top: 0px;
}
.search-header-basic {
	background-color: #ffffff!important;
	border-bottom: 2px solid #ededed!important;
	border-top: 2px solid #ededed!important;
}
/*I don't know that this is needed.  I used bootstrap styles.*/
.jqx-grid-load {
	background-position: 0% 0%;
}
.active_form {
	border: 2px solid gray;
	padding: 15px;
	border-radius: 5px;
	margin-top: 1rem;
}
.alert_box {
	border: 3px solid red;
	padding: 15px;
	padding-bottom: 0;
	margin: 2px;
	margin-top: 0;
	margin-bottom: 10px;
	border-radius: 5px;
	width: auto;
}
li.colls {
	margin-left: -20px;
	list-style: none;
	padding: 0;
}
table#static_values td {
	background-color: white;
	padding-left: 20px;
	border: none;
	font-size: 14px;
	letter-spacing: -.01em;
	font-weight: bold;
}
table#static_values label {
	font-size: 13px;
	letter-spacing: -.01em;
	font-weight: normal;
}
table.inputTable tr td label {
	padding-top: 5px;
	margin: 0 8px;
	margin-bottom: 0px;
}
table.inputTable tr {
	background-color: white;
}
.save_shared {
	/*  desktop button for saving shared locality on dialog*/
	border: 2px solid red;
	position: absolute;
	left: 1.5em !important;
}
/* tab cards */
.tab-card-main {
	background-color: #f5f5f5;
	border-radius: 4px 4px 0 0;
}
.tab-card-header {
	background-color: #3E6F7D;
	padding-top: 11px;
	border-radius: 6px 6px 0 0;
}
.card-title:first-child {
	padding-left: .5em;
}
.list-even {
	background-color: #f8f9fa;
	padding: .5rem 0;
}
.list-odd {
	background-color: #ffffff;
	padding: .5rem 0;
}
.tab-card-header > .nav-tabs {
	border: none;
	margin: 0;
	background-color: #3E6F7D;
}
.bg-blue-gray {
	background-color: #deebec;
}
/******************/
.table-striped tbody tr:nth-of-type(odd) {
	background-color: #f8f9fa;
}
.table-responsive {
	font-size: .875rem;
}
.card-header:first-child {
	border-radius: .25rem .25rem 0 0;
}
.search-box, .add-form {
	background-color: #f5f5f5;
	margin-top: 1rem;
	padding-bottom: .25rem;
	width: 100%;
	border-radius: .5rem;
	border: 2px solid #3E6F7D;
}
.search-box-header, .add-form-header {
	background-color: #3e6f7d;
	padding: .15rem 1rem .1rem 1.65rem;
	margin-top: -1px;
}
::-ms-clear {
	display: none;
}
.form-control-clear {
	z-index: 10;
	pointer-events: auto;
	cursor: pointer;
}
.jqx-grid-cell-selected-light a:focus, .jqx-fill-state-pressed a {
	color: blue !important; /*changed from white*/
	text-decoration: underline;
}
input[type="button"]#delPOIbutton {
	font-family: FontAwesome;
	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
	background-color: white;
}
input[type="button"]#addmorePOIbutton {
	font-family: FontAwesome;
	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
	background-color: white;
}
select#lngbox::after {
	border-left: 0;
}
select, select::after {
	background-color: #f5f5f5;
}
table#POITable {
	line-height: 24px;
}
table#POITable tr td {
	font-size: 12px;
	border: none;
	border-bottom: 1px solid #ccc;
}
table#POITable tr td select:hover {
	border-left: 0;
}
.b-collapse-s {
	border-collapse: separate !important;
}
.ui-dialog {
	background: white !important;
}
.coll-button {
	background: #BAC5C6;
	border: 1px solid #BAC5C6;
	color: #212529;
	padding: .9rem;
	margin-right: -5px;
}

#contenttablejqxgrid {
	z-index: 100;
}
ul.checks {
	width: 250px;
	font-size: 12px;
	padding: 0;
	margin: 0;
}
ul.checks li {
	list-style: none;
	width: 90px;
	float: left;
	display: inline;
	padding: 0px;
	padding-top: 0;
}
/* ... */

